--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,6 +90,9 @@ link_libraries(${CMAKE_THREAD_LIBS_INIT})
 
 set(BOOST_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/third_party/boost)
 
+add_definitions(-DBOOST_ASIO_SEPARATE_COMPILATION)
+add_definitions(-DBOOST_BEAST_SEPARATE_COMPILATION)
+
 add_definitions(-DBOOST_LOCALE_HIDE_AUTO_PTR)
 add_definitions(-DBOOST_COROUTINES_NO_DEPRECATION_WARNING)
 add_subdirectory(third_party/boost)
@@ -140,7 +143,6 @@ link_libraries(
 		Boost::context
 		Boost::thread
 		Boost::date_time
-		Boost::filesystem
 		Boost::regex
 
 		${ZLIB_LIBRARIES}
